# youtube

./: README.md
Image_to_3d_particle/: README.md  particle-visualization.html
codered/: index.html  index1.html  index2.html  index3.html  index4.html  index5.html
cssDemonstration/: index1.html  index2.html  index3.html
cssdemo/: index.html  index1.html  index2.html  index3.html
fatalityanalysisapi/: crash.py  requirements.txt
freeenergyapi/: electric.py  key.txt
freeenergyapi/site/: data.json  index.html
moodtracker/: Cargo.toml
moodtracker/src/: main.rs
nasasatellitewildfire/: MAP_KEY.txt  README  geocode_macro.vb  requirements.txt  wildfire_report.py
thisappwillselfdestruct/: README.txt  index.html
weatherapp/: Cargo.toml  README.txt
weatherapp/src/: main.rs
writecodeinexcel/: README  inventory.xlsm  module1.vb
xmaswebpage/: index.html  index2.html  index3.html  index4.html  index5.html
